# genetic-algorithms-T2

cpp-proj/: CMakeLists.txt  config.h
cpp-proj/src/: methods.cpp  methods.h  testRunner.cpp  testRunner.h
cpp-proj/util/: bitset.cpp  bitset.h  functions.cpp  functions.h  random.cpp  random.h  result.h
latex/: t2.aux  t2.fdb_latexmk  t2.fls  t2.out  t2.tex
latex 2/: t2.fls  t2.out
latex 2'/: t2'.aux  t2'.fdb_latexmk  t2'.fls  t2'.out  t2'.tex
